--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
-
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
-
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <meta name="theme-color" content="#fafafa">
 </head>
 
@@ -23,9 +23,24 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
+<!-- site header section -->
+  <header>
+  	<div class="container">
+  		<address class="row">
+  			<div class="col-sm-6">
+  				<a class="phone-link" href="tel:+38-093-415-84-42"><i class="fas fa-mobile-alt"></i></i>093-415-84-42</a>
+  			</div>
+  			<div class="col-sm-6">
+  				<a class="mail-link" href="mailto: logicline@gmail.com"><i class="fas fa-envelope"></i>logicline@gmail.com</a>
+  			</div>
+  		</address>
+  	</div>
+  </header>
+
+
   <p>Hello world! This is HTML5 Boilerplate.</p>
   <script src="js/vendor/modernizr-3.7.1.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <!-- <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script> -->
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
