added markup for header nav menu

--- a/index.html
+++ b/index.html
@@ -35,6 +35,27 @@
   			</div>
   		</address>
   	</div>
+    <div class="top-menu">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-4">
+            <a class="logo" href="">
+              <img src="img/logo_logic_line_custom_white.svg"/>
+            </a> 
+          </div>
+          <nav class="col-sm-8">
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Advantages</a></li>
+              <li><a href="#">Services</a></li>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Portfolio</a></li>
+              <li><a href="#">Contact Us</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </div>
   </header>
 
 
