finished styles for mobile menu hamburger

--- a/index.html
+++ b/index.html
@@ -39,23 +39,28 @@
   	</div>
     <div class="top-menu">
       <div class="container">
-        <div class="row">
-          <div class="col-sm-4">
+        <nav class="row justify-content-between">
+          <div class="col-auto">
             <a class="logo" href="">
               <img src="img/logo_logic_line_custom_white.svg"/>
             </a> 
           </div>
-          <nav class="col-sm-8">
-            <ul>
+          <ul class="col-auto">
               <li><a href="#">Home</a></li>
               <li><a href="#">Advantages</a></li>
               <li><a href="#">Services</a></li>
               <li><a href="#">About Us</a></li>
               <li><a href="#">Portfolio</a></li>
               <li><a href="#">Contact Us</a></li>
-            </ul>
-          </nav>
-        </div>
+          </ul>
+          <div id="menu-hamburger" class="col-auto">
+            <div class="bar-button">
+              <div class="top-bar"></div>
+              <div class="middle-bar"></div>
+              <div class="bottom-bar"></div>
+            </div>
+          </div>
+        </nav>
       </div>
     </div>
     <div class="banner">
