fixed and added styles for headers and first text block

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   				<a class="phone-link" href="tel:+38-093-415-84-42"><i class="fas fa-mobile-alt"></i></i>093-415-84-42</a>
   			</div>
   			<div class="col-sm-6">
-  				<a class="mail-link" href="mailto: logicline@gmail.com"><i class="fas fa-envelope"></i>logicline@gmail.com</a>
+  				<a class="mail-link" href="mailto: logicspace@gmail.com"><i class="fas fa-envelope"></i>logicspace@gmail.com</a>
   			</div>
   		</address>
   	</div>
@@ -42,7 +42,7 @@
         <nav class="row justify-content-between">
           <div class="col-auto">
             <a class="logo" href="">
-              <img src="img/logo_logic_line_custom_white.svg"/>
+              <img src="img/logo_logic_space.svg"/>
             </a> 
           </div>
           <ul class="col-auto">
@@ -77,7 +77,46 @@
       </div>
     </div>
   </header>
-
+  <section class="intro-text">
+  	<div class="container">
+	  	<h2>Разработка сайтов</h2>
+	  	<div class="row">
+	  		<div class="col-md-6">
+	  			<p> 
+	  				Cоздание и поддержка эфективных сайтов с уникальным фирменным стилем, которые воплощают Ваши идеи и дают гарантированный результат. Компания <strong>LOGICSPACE</strong> производит все работы связаные с разработкой и продвижением результативных сайтов - от сбора исходных данных и дизайна, до вывода на первые позиции в рейтингах поисковых систем и поддержки их работы. 
+	  			</p>
+	  		</div>
+	  		<div class="col-md-6">
+	  			<ol class="steps">
+	  				<li>
+	  					<h4>Сбор исходных данных</h4>
+	  					<p>
+	  						Уяснение требований заказчика, анализ рынка (целевой аудитории посетителей сайта), сбор и систематизация всех неоьходимых исходных данных.
+	  					</p>
+	  				</li>
+	  				<li>
+	  					<h4>Проектирование дизайна</h4>
+	  					<p>
+	  						Создание макета сайта в фирменном стиле компании с учетом лучших мировых практик и современных трендов.
+	  					</p>
+	  				</li>
+	  				<li>
+	  					<h4>Разработка и развертывание</h4>
+	  					<p>
+	  						Написание адаптивных кроссбраузерных страниц сайта с применением современного стека технологий. Развертывание сайта на базе пополярных систем WordPress или OpenCart, его тестирование и запуск в продакшене.
+	  					</p>
+	  				</li>
+	  				<li>
+	  					<h4>Продвижение и поддержка</h4>
+	  					<p>
+	  						Продвижение сайта в рейтингах популярных поисковых систем, всесторонняя техническая поддержка сайта, обучение заказчика самостоятельной работе с содержимым сайта.
+	  					</p>
+	  				</li>
+	  			</ol>
+	  		</div>
+	  	</div>
+	</div>
+  </section>
 
   <script src="js/vendor/modernizr-3.7.1.min.js"></script>
   <!-- <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script> -->
