started advantages section in index.html

--- a/index.html
+++ b/index.html
@@ -118,6 +118,33 @@
 	</div>
   </section>
 
+  <section class="advantages-sect">
+  	<div class="container">
+  		<div class="row">
+  			<div class="col-12">
+  				<h3>Наши преимущества</h3>
+  			</div>
+  		</div>
+  		<div class="row">
+  			<div class="col-md-5">
+  				Разработка под ключ
+  			</div>
+  			<div class="col-md-7">
+  				<div class="row">
+  					<div class="col-md-12">
+  						Высокое качество работ
+  					</div>
+  				</div>
+  				<div class="row">
+  					<div class="col-md-12">
+  						Ориентированость на результат
+  					</div>
+  				</div>
+  			</div>
+  		</div>
+  	</div>
+  </section>
+
   <script src="js/vendor/modernizr-3.7.1.min.js"></script>
   <!-- <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script> -->
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
