added initial styles to advantages section

--- a/index.html
+++ b/index.html
@@ -126,18 +126,36 @@
   			</div>
   		</div>
   		<div class="row">
-  			<div class="col-md-5">
-  				Разработка под ключ
+  			<div class="col-md-6 advantage-item">
+          <div class="advantage-icon">as</div>
+          <div class="advantage-text">
+    				<h4>Разработка под ключ</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+            </p>
+        </div>
   			</div>
-  			<div class="col-md-7">
+  			<div class="col-md-6">
   				<div class="row">
-  					<div class="col-md-12">
-  						Высокое качество работ
+  					<div class="col-md-12 advantage-item">
+              <div class="advantage-icon">sd</div>
+              <div class="advantage-text">
+    						<h4>Высокое качество работ</h4>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                </p>
+              </div>
   					</div>
   				</div>
   				<div class="row">
-  					<div class="col-md-12">
-  						Ориентированость на результат
+  					<div class="col-md-12 advantage-item">
+              <div class="advantage-icon">as</div>
+              <div class="advantage-text">
+    						<h4>Ориентированость на результат</h4>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                </p>
+              </div>
   					</div>
   				</div>
   			</div>
