added poligons.svg files for advantages block, added styles to advantages block

--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
   			</div>
   		</div>
   		<div class="row">
-  			<div class="col-md-6 advantage-item">
-          <div class="advantage-icon">as</div>
+  			<div class="col-md-6 advantage-item item-1">
+          <div class="advantage-icon"></div>
           <div class="advantage-text">
     				<h4>Разработка под ключ</h4>
             <p>
@@ -137,8 +137,8 @@
   			</div>
   			<div class="col-md-6">
   				<div class="row">
-  					<div class="col-md-12 advantage-item">
-              <div class="advantage-icon">sd</div>
+  					<div class="col-md-12 advantage-item item-2">
+              <div class="advantage-icon"></div>
               <div class="advantage-text">
     						<h4>Высокое качество работ</h4>
                 <p>
@@ -148,8 +148,8 @@
   					</div>
   				</div>
   				<div class="row">
-  					<div class="col-md-12 advantage-item">
-              <div class="advantage-icon">as</div>
+  					<div class="col-md-12 advantage-item item-3">
+              <div class="advantage-icon"></div>
               <div class="advantage-text">
     						<h4>Ориентированость на результат</h4>
                 <p>
