--- a/index.html
+++ b/index.html
@@ -127,7 +127,9 @@
   		</div>
   		<div class="row">
   			<div class="col-md-6 advantage-item item-1">
-          <div class="advantage-icon"></div>
+          <div class="advantage-icon">
+            <img src="img/key-icon.svg" alt="Full development" />
+          </div>
           <div class="advantage-text">
     				<h4>Разработка под ключ</h4>
             <p>
@@ -138,7 +140,9 @@
   			<div class="col-md-6">
   				<div class="row">
   					<div class="col-md-12 advantage-item item-2">
-              <div class="advantage-icon"></div>
+              <div class="advantage-icon">
+                <img src="img/quality-icon.svg" alt="The hightest quality" />
+              </div>
               <div class="advantage-text">
     						<h4>Высокое качество работ</h4>
                 <p>
@@ -149,7 +153,9 @@
   				</div>
   				<div class="row">
   					<div class="col-md-12 advantage-item item-3">
-              <div class="advantage-icon"></div>
+              <div class="advantage-icon">
+                <img src="img/result-icon.svg" alt="Always result oriented development" />
+              </div>
               <div class="advantage-text">
     						<h4>Ориентированость на результат</h4>
                 <p>
