--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
   			</div>
   		</div>
   		<div class="row">
-  			<div class="col-md-6 advantage-item item-1">
+  			<div class="col-md-4 col-lg-6 advantage-item item-1">
           <div class="advantage-icon">
             <img src="img/key-icon.svg" alt="Full development" />
           </div>
@@ -137,9 +137,9 @@
             </p>
         </div>
   			</div>
-  			<div class="col-md-6">
+  			<div class="col-md-8 col-lg-6">
   				<div class="row">
-  					<div class="col-md-12 advantage-item item-2">
+  					<div class="col-md-6 col-lg-12 advantage-item item-2">
               <div class="advantage-icon">
                 <img src="img/quality-icon.svg" alt="The hightest quality" />
               </div>
@@ -150,9 +150,7 @@
                 </p>
               </div>
   					</div>
-  				</div>
-  				<div class="row">
-  					<div class="col-md-12 advantage-item item-3">
+  					<div class="col-md-6 col-lg-12 advantage-item item-3">
               <div class="advantage-icon">
                 <img src="img/result-icon.svg" alt="Always result oriented development" />
               </div>
@@ -167,6 +165,12 @@
   			</div>
   		</div>
   	</div>
+  </section>
+
+  <section class="services">
+    <div class="container">
+      <h3>Услуги компании</h3>
+    </div>    
   </section>
 
   <script src="js/vendor/modernizr-3.7.1.min.js"></script>
