added first item to services section with appropriate styles

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link rel="stylesheet" href="css/owl.carousel.min.css">
+  <link rel="stylesheet" href="css/owl.theme.default.min.css">
   <meta name="theme-color" content="#fafafa">
 </head>
 
@@ -170,12 +172,49 @@
   <section class="services">
     <div class="container">
       <h3>Услуги компании</h3>
+      <div class="row">
+        <div class="col-12"> 
+          <div class="_owl-carousel">
+            <div class="row service-item">
+              <div class="col-md-5 item-text">
+                <h4>Создание сайта-визитки</h4>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                </p>
+                <a hreg="#" class="item-order">Заказать</a>
+              </div>
+              <div class="col-md-7 item-portfolio">
+                <div class="portfolio-inner">
+                  <img src="img/exmpls/portfolio_1.jpg" class="img-2"/>
+                  <img src="img/exmpls/portfolio_2.jpg" class="img-1" />
+                </div>
+              </div>
+            </div>
+            <div class="row service-item">
+              <div class="col-md-5 item-text">
+                <h4>Сайты для малого и среднего бизнеса</h4>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                </p>
+                <a hreg="#" class="item-order">Заказать</a>
+              </div>
+              <div class="col-md-7 item-portfolio">
+                <div class="portfolio-inner">
+                  <img src="img/exmpls/portfolio_1.jpg" class="img-2"/>
+                  <img src="img/exmpls/portfolio_2.jpg" class="img-1" />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>    
   </section>
 
   <script src="js/vendor/modernizr-3.7.1.min.js"></script>
   <!-- <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script> -->
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
+  <script src="js/owl.carousel.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
 
