--- a/index.html
+++ b/index.html
@@ -209,6 +209,40 @@
                 </div>
               </div>
             </div>
+            <div class="row service-item">
+              <div class="col-md-8 item-enterprise">
+                <div class="enterprise-inner">
+                  <img src="img/exmpls/corp_1.jpg" class="img-1 img-observe"/>
+                  <img src="img/exmpls/corp_2.jpg" class="img-2 img-observe" />
+                </div>
+              </div>
+              <div class="col-md-4 item-text">
+                <h4>Корпоративные сайты</h4>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                </p>
+                <a hreg="#" class="item-order">Заказать</a>
+              </div>
+            </div>
+            <div class="row service-item">
+              <div class="col-12 item-ecommerce">
+                <div class="row">
+                  <div class="col-md-4">
+                    <div class="side-img img-left">.</div>
+                  </div>  
+                  <div class="col-md-4 item-text">
+                    <h4>Интернет магазин</h4>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </p>
+                    <a hreg="#" class="item-order">Заказать</a>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="side-img img-right">.</div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
