--- a/index.html
+++ b/index.html
@@ -249,6 +249,30 @@
     </div>    
   </section>
 
+  <section class="about-us-sect">
+  	<div class="container">
+  		<h3>О нас</h3>
+  		<div class="row">
+  			<div class="col-sm-6">
+  				<p class="about-content text-justify">
+  					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  				</p>
+  			</div>
+  			<div class="col-sm-6">
+  				<p class="about-content text-justify">
+  					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  				</p>
+  			</div>
+  		</div>
+  	</div>
+  </section>
+
+  <section class="portfolio-sect">
+  	<div class="container">
+  		<h3>Образцы работ</h3>
+  	</div>
+  </section>
+
   <script src="js/vendor/modernizr-3.7.1.min.js"></script>
   <!-- <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script> -->
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
