added images and icons to portfolio section

--- a/index.html
+++ b/index.html
@@ -269,7 +269,27 @@
 
   <section class="portfolio-sect">
   	<div class="container">
-  		<h3>Образцы работ</h3>
+  	  <h3>Образцы работ</h3>
+  	  <div class="row">
+  	  	<div class="col-12 portfolio-page">
+        	<div class="row">
+        		<a class="col-lg-6 portfolio-item">
+        			<img src="./img/portfolio/personalmoneyservice_example_cr.png">
+        		</a>
+        		<a class="col-lg-6 portfolio-item">
+        			<img src="./img/portfolio/resumewritinglab_example_cr.png">
+        		</a>
+        	</div>
+        	<div class="row">
+        		<a class="col-lg-6 portfolio-item">
+        			<img src="./img/portfolio/lazerdot_example_cr.png">
+        		</a>
+        		<a class="col-lg-6 portfolio-item">
+        			<img src="./img/portfolio/installmentcredots_example_cr.png">
+        		</a>
+        	</div>
+        </div>
+      </div>
   	</div>
   </section>
 
