added icons with semi dark background and relevant links to examples images

--- a/index.html
+++ b/index.html
@@ -273,20 +273,36 @@
   	  <div class="row">
   	  	<div class="col-12 portfolio-page">
         	<div class="row">
-        		<a class="col-lg-6 portfolio-item">
+        		<div class="col-lg-6 portfolio-item">
         			<img src="./img/portfolio/personalmoneyservice_example_cr.png">
-        		</a>
-        		<a class="col-lg-6 portfolio-item">
+        			<div class="example-details justify-content-center align-items-center flex-column">
+        				<img src="./img/portfolio/logo_personalmoneyservice_h_white.svg" />
+        				<a href="https://personalmoneyservice.com/" target="blank">Посмотреть</a>
+        			</div>
+        		</div>
+        		<div class="col-lg-6 portfolio-item">
         			<img src="./img/portfolio/resumewritinglab_example_cr.png">
-        		</a>
+        			<div class="example-details justify-content-center align-items-center flex-column">
+        				<img src="./img/portfolio/logo_resumewriting_white.svg" />
+        				<a href="https://resumewritinglab.com/" target="blank">Посмотреть</a>
+        			</div>
+        		</div>
         	</div>
         	<div class="row">
-        		<a class="col-lg-6 portfolio-item">
+        		<div class="col-lg-6 portfolio-item">
         			<img src="./img/portfolio/lazerdot_example_cr.png">
-        		</a>
-        		<a class="col-lg-6 portfolio-item">
+        			<div class="example-details justify-content-center align-items-center flex-column">
+        				<img src="./img/portfolio/logo_lazerdot_white.svg" />
+        				<a href="https://lazerdot.com.ua/" target="blank">Посмотреть</a>
+        			</div>
+        		</div>
+        		<div class="col-lg-6 portfolio-item">
         			<img src="./img/portfolio/installmentcredots_example_cr.png">
-        		</a>
+        			<div class="example-details justify-content-center align-items-center flex-column">
+        				<img src="./img/portfolio/instcredit_logotype_white.svg" />
+        				<a href="https://installmentcredits.com" target="blank">Посмотреть</a>
+        			</div>
+        		</div>
         	</div>
         </div>
       </div>
